--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,10 @@
     />
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <header>
+      <h1>Rustica</h1>
+      <p>Bio und Fair seit 1991</p>
+    </header>
     <main>
       <a href="./my-subpage/index.html">Link to Subpage</a>
       <div>Home</div>
