--- a/src/index.html
+++ b/src/index.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index Page</title>
     <link rel="stylesheet" href="css/main.scss" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Oregano"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
       <h1>Rustica</h1>
-      <p>Bio und Fair seit 1991</p>
+      <p class="subhead_m">Bio und Fair seit 1991</p>
+      <a class="btn--dunkel">zum Shop</a>
     </header>
     <main>
-      <a href="./my-subpage/index.html">Link to Subpage</a>
-      <div>Home</div>
+      
     </main>
     <script src="js/index.js"></script>
   </body>
