--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index Page</title>
-    <link rel="stylesheet" href="css/main.scss" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <header>
-      <h1>Rustica</h1>
-      <p class="subhead_m">Bio und Fair seit 1991</p>
-      <a class="btn--dunkel">zum Shop</a>
-    </header>
-    <main>
-      
-    </main>
-    <script src="js/index.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Index Page</title>
+  <link rel="stylesheet" href="css/main.scss" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <header id="home--header-container">
+    <div class="home--header">
+      <div class="header--title">
+        <h1>Rustica</h1>
+        <p class="header--subhead">Bio und Fair seit 1991</p>
+      </div>
+      <button class="btn--dunkel">zum Shop</button>
+    </div>
+  </header>
+  <main>
+
+  </main>
+  <script src="js/index.js"></script>
+</body>
+
 </html>
