--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,23 @@
       <button class="btn--dunkel">zum Shop</button>
     </div>
   </header>
-  <main>
+  <main id="home--main">
+    <section class="main--section">
+      <div class="section--text-container" class="section--text">
+        <h2 class="section--head">Rösterei & Café</h2>
+        <p class="body-text">Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen Rösterei, serviert im gemütlichen Café in der
+          Innenstadt.</p>
+        <div class="section--info">
+          <div class="section--info-container" class="body-text">Komm uns besuchen!<br>
+            Fraunhoferstr. 13, Kiel</div>
+          <div class="section--info-container" class="body-text">Mo – Fr 8–18 Uhr<br>
+            Sa 11–18 Uhr</div>
+        </div>
+      </div>
+      <div class="section--img"><img src="assets/main/images/FEND-Coffee-shop.jpg" alt="A Picture of our Coffee Shop"></div>
+    </section>
+    </div>
+
 
   </main>
   <script src="js/index.js"></script>
