build home__main--bio-section

--- a/src/index.html
+++ b/src/index.html
@@ -21,20 +21,35 @@
     </div>
   </header>
   <main id="home--main">
-    <section class="main--section">
-      <div class="section--text-container" class="section--text">
-        <h2 class="section--head">Rösterei & Café</h2>
-        <p class="body-text">Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen Rösterei, serviert im gemütlichen Café in der
-          Innenstadt.</p>
-        <div class="section--info">
-          <div class="section--info-container" class="body-text">Komm uns besuchen!<br>
-            Fraunhoferstr. 13, Kiel</div>
-          <div class="section--info-container" class="body-text">Mo – Fr 8–18 Uhr<br>
-            Sa 11–18 Uhr</div>
+    <section id="section--info" class="main--section">
+      <div class="section--info-top">
+        <div class="section--text-container" class="section--text">
+          <h2 class="section--head">Rösterei & Café</h2>
+          <p class="body-text">Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen Rösterei, serviert im
+            gemütlichen Café in der
+            Innenstadt.</p>
+          <div class="section--info">
+            <div class="section--info-container" class="body-text">Komm uns besuchen!<br>
+              Fraunhoferstr. 13, Kiel</div>
+            <div class="section--info-container" class="body-text">Mo – Fr 8–18 Uhr<br>
+              Sa 11–18 Uhr</div>
+          </div>
+        </div>
+        <div class="section--img"><img src="assets/main/images/FEND-Coffee-shop.jpg" alt="A Picture of our Coffee Shop">
         </div>
       </div>
-      <div class="section--img"><img src="assets/main/images/FEND-Coffee-shop.jpg" alt="A Picture of our Coffee Shop"></div>
+      <div class="section--info-bottom">
+        <div class="section--text-container" class="section--text">
+          <h2 class="section--head">Bio und Fair</h2>
+          <p class="body-text">Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konsonantien leben die
+            Blindtexte. Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konsonantien leben die
+            Blindtexte. Und das alles in bester Bio Qualität</p>
+        </div>
+        <div class="section--img"><img src="assets/main/images/FEND-coffee-plant.jpg" alt="A picture of a coffee plant">
+      </div>
+      </div>
     </section>
+    
     </div>
 
 
