--- a/src/index.html
+++ b/src/index.html
@@ -12,103 +12,13 @@
 
 <body>
   <header id="home--header-container">
-    <div class="home--header">
-      <div class="header--title">
-        <h1>Rustica</h1>
-        <p class="header--subhead">Bio und Fair seit 1991</p>
-      </div>
-      <button class="btn--dunkel">zum Shop</button>
-    </div>
+    <include src="html/_section--header.html"/>
   </header>
   <main id="home--main">
-    <section id="section--info" class="main--section">
-      <div class="section--info-top">
-        <div class="section--text-container" class="section--text">
-          <h2 class="section--head">Rösterei & Café</h2>
-          <p class="body-text">Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen Rösterei, serviert im
-            gemütlichen Café in der
-            Innenstadt.</p>
-          <div class="section--info">
-            <div class="section--info-container" class="body-text">Komm uns besuchen!<br>
-              Fraunhoferstr. 13, Kiel</div>
-            <div class="section--info-container" class="body-text">Mo – Fr 8–18 Uhr<br>
-              Sa 11–18 Uhr</div>
-          </div>
-        </div>
-        <div class="section--img"><img src="assets/main/images/FEND-Coffee-shop.jpg" alt="A Picture of our Coffee Shop">
-        </div>
-      </div>
-      <div class="section--info-bottom">
-        <div class="section--text-container" class="section--text">
-          <h2 class="section--head">Bio und Fair</h2>
-          <p class="body-text">Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konsonantien leben die
-            Blindtexte. Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konsonantien leben die
-            Blindtexte. Und das alles in bester Bio Qualität</p>
-        </div>
-        <div class="section--img"><img src="assets/main/images/FEND-coffee-plant.jpg" alt="A picture of a coffee plant">
-        </div>
-      </div>
-    </section>
-    <section id="section--sorten" class="main--section-dark">
-      <h2 class="section--head">Entdecke unsere Kaffee Sorten</h2>
-      <div class="display--container">
-        <div class="display--product-container">
-          <img class="display--product-img" src="assets/main/images/FEND_Coffee_Costa-Rica 2.jpg"
-            alt="Product Image of the Coffee 'Costa Rica'"></img>
-          <div class="display--info-container">
-            <div class="product-name">Costa Rica</div>
-            <div class="product-price">6,90€ – 26,90€</div>
-            <div class="icon-container">
-              <img src="assets/main/icons/Icon Kaffee Bohnen.svg" alt="Stylized icon of coffee beans">
-              <img src="assets/main/icons/Icon French Press.svg" alt="Stylized icon of french press coffee maker">
-              <img src="assets/main/icons/Icon Kaffee Schaufel.svg" alt="Stylized icon of coffee scoop">
-            </div>
-          </div>
-        </div>
-        <div class="display--product-container">
-          <img class="display--product-img" src="assets/main/images/FEND_Coffee_Costa-Rica 2.jpg"
-            alt="Product Image of the Coffee 'Costa Rica'"></img>
-          <div class="display--info-container">
-            <div class="product-name">Costa Rica</div>
-            <div class="product-price">6,90€ – 26,90€</div>
-          </div>
-          <div class="icon-container">
-            <img src="assets/main/icons/Icon Kaffee Bohnen.svg" alt="Stylized icon of coffee beans">
-            <img src="assets/main/icons/Icon French Press.svg" alt="Stylized icon of french press coffee maker">
-            <img src="assets/main/icons/Icon Kaffee Schaufel.svg" alt="Stylized icon of coffee scoop">
-          </div>
-        </div>
-        <div class="display--product-container">
-          <img class="display--product-img" src="assets/main/images/FEND_Coffee_Costa-Rica 2.jpg"
-            alt="Product Image of the Coffee 'Costa Rica'"></img>
-          <div class="display--info-container">
-            <div class="product-name">Costa Rica</div>
-            <div class="product-price">6,90€ – 26,90€</div>
-          </div>
-          <div class="icon-container">
-            <img src="assets/main/icons/Icon Kaffee Bohnen.svg" alt="Stylized icon of coffee beans">
-            <img src="assets/main/icons/Icon French Press.svg" alt="Stylized icon of french press coffee maker">
-            <img src="assets/main/icons/Icon Kaffee Schaufel.svg" alt="Stylized icon of coffee scoop">
-          </div>
-        </div>
-        <div class="display--product-container">
-          <img class="display--product-img" src="assets/main/images/FEND_Coffee_Costa-Rica 2.jpg"
-            alt="Product Image of the Coffee 'Costa Rica'"></img>
-          <div class="display--info-container">
-            <div class="product-name">Costa Rica</div>
-            <div class="product-price">6,90€ – 26,90€</div>
-          </div>
-          <div class="icon-container">
-            <img src="assets/main/icons/Icon Kaffee Bohnen.svg" alt="Stylized icon of coffee beans">
-            <img src="assets/main/icons/Icon French Press.svg" alt="Stylized icon of french press coffee maker">
-            <img src="assets/main/icons/Icon Kaffee Schaufel.svg" alt="Stylized icon of coffee scoop">
-          </div>
-        </div>
-      </div>
-      <button class="btn--dunkel">alle Produkte</button>
-    </section>
+    <include src="html/_section--info.html"/>  
+    <include src="html/_section--sorten.html"/>
+    <include src="html/_section--herkunft.html"/>
   </main>
   <script src="js/index.js"></script>
 </body>
-
 </html>
