build home__main--section-inhalt

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,13 @@
 
 <body>
   <header id="home--header-container">
-    <include src="html/_section--header.html"/>
+    <include src="html/_home/_section--header.html"/>
   </header>
   <main id="home--main">
-    <include src="html/_section--info.html"/>  
-    <include src="html/_section--sorten.html"/>
-    <include src="html/_section--herkunft.html"/>
+    <include src="html/_home/_section--info.html"/>  
+    <include src="html/_home/_section--sorten.html"/>
+    <include src="html/_home/_section--herkunft.html"/>
+    <include src="html/_home/_section--inhalt.html"/>
   </main>
   <script src="js/index.js"></script>
 </body>
