build home__ mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,11 @@
     <include src="html/_home/_section--sorten.html"/>
     <include src="html/_home/_section--herkunft.html"/>
     <include src="html/_home/_section--inhalt.html"/>
+    <include src="html/_home/_section--ort.html"/>
   </main>
   <script src="js/index.js"></script>
+  <footer id="footer-m" class="footer">
+    <include src="html/_footer.html"/>
+  </footer>
 </body>
 </html>
