build _café full page-m

--- a/src/café.html
+++ b/src/café.html
@@ -11,14 +11,12 @@
 </head>
 
 <body>
-  <header id="home--header-container">
-    <include src="_home/_section--header.html"/>
+  <header id="café--header-container">
+    <include src="_café/_section--header.html"/>
   </header>
-  <main id="home--main">
-    <include src="_home/_section--info.html"/>  
-    <include src="_home/_section--sorten.html"/>
-    <include src="_home/_section--herkunft.html"/>
-    <include src="_home/_section--inhalt.html"/>
+  <main id="café--main">
+    <include src="_café/_section--info.html"/>  
+    <include src="_café/_section--gallery.html"/>
     <include src="_home/_section--ort.html"/>
   </main>
   <script src="js/index.js"></script>
