build herkunft__ mobile, build impressum__ mobile

--- a/src/_café/_section--info.html
+++ b/src/_café/_section--info.html
@@ -1,5 +1,5 @@
 <section id="cafe__section--info" class="main--section">
-  <div class="section--info-top">
+  <div class="section--info-right">
     <div class="section--text-container" class="section--text">
       <h2 class="section--head">Rösterei & Café</h2>
       <p class="body-text">Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen Rösterei, serviert im
@@ -12,7 +12,7 @@
           Sa 11–18 Uhr</div>
       </div>
     </div>
-    <div class="section--img"><img src="assets/main/images/FEND-Coffee-machine-2.jpg"
+    <div class="section--img-right"><img src="assets/main/images/FEND-Coffee-machine-2.jpg"
         alt="A Picture of our Coffee Shop">
     </div>
   </div>
