--- a/src/herkunft.html
+++ b/src/herkunft.html
@@ -4,22 +4,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rustica</title>
+  <title>Die Herkunft</title>
   <link rel="stylesheet" href="css/main.scss" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <header id="home--header-container">
-    <include src="_home/_section--header.html"/>
+  <header id="herkunft--header-container">
+    <include src="_herkunft/_section--header.html"/>
   </header>
-  <main id="home--main">
-    <include src="_home/_section--info.html"/>  
-    <include src="_home/_section--sorten.html"/>
-    <include src="_home/_section--herkunft.html"/>
-    <include src="_home/_section--inhalt.html"/>
-    <include src="_home/_section--ort.html"/>
+  <main id="café--main">
+    <include src="_herkunft/_section--info.html"/>  
   </main>
   <script src="js/index.js"></script>
   <footer id="footer-m" class="footer">
