create _mixins & media, fine tune styles

--- a/src/_home/_section--herkunft.html
+++ b/src/_home/_section--herkunft.html
@@ -1,5 +1,6 @@
 <div id="section--herkunft" class="main--section">
-    <h2 class="section--head">Herkunft</h2>
+    <h3 class="section--head">Herkunft</h3>
     <p class="body-text">Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konsonantien leben die
       Blindtexte. Und das alles in bester Bio Qualität</p>
+    <button class="btn--dunkel">mehr</button>
 </div>
