--- a/src/_home/_section--sorten.html
+++ b/src/_home/_section--sorten.html
@@ -2,55 +2,55 @@
     <h2 class="section--head">Entdecke unsere Kaffee Sorten</h2>
     <div class="display--container">
       <div class="display--product-container">
-        <img class="display--product-img" src="assets/main/images/FEND_Coffee_Costa-Rica 2.jpg"
+        <img class="display--product-img" src="assets/main/images/FEND_Coffee_Costa-Rica-2.jpg"
           alt="Product Image of the Coffee 'Costa Rica'"></img>
         <div class="display--info-container">
           <div class="product-name">Costa Rica</div>
           <div class="product-price">6,90€ – 26,90€</div>
           <div class="icon-container">
-            <img src="assets/main/icons/Icon Kaffee Bohnen.svg" alt="Stylized icon of coffee beans">
-            <img src="assets/main/icons/Icon French Press.svg" alt="Stylized icon of french press coffee maker">
-            <img src="assets/main/icons/Icon Kaffee Schaufel.svg" alt="Stylized icon of coffee scoop">
+            <img src="../src/assets/main/icons/icon__kaffee-bohnen_wh.svg" alt="Stylized icon of coffee beans">
+            <img src="../src/assets/main/icons/icon__french-press_wh.svg" alt="Stylized icon of french press coffee maker">
+            <img src="../src/assets/main/icons/icon__kaffee-schaufel_wh.svg" alt="Stylized icon of coffee scoop">
           </div>
         </div>
       </div>
       <div class="display--product-container">
-        <img class="display--product-img" src="assets/main/images/FEND_Coffee_Costa-Rica 2.jpg"
+        <img class="display--product-img" src="assets/main/images/FEND_Coffee_Costa-Rica-2.jpg"
           alt="Product Image of the Coffee 'Costa Rica'"></img>
         <div class="display--info-container">
           <div class="product-name">Costa Rica</div>
           <div class="product-price">6,90€ – 26,90€</div>
-        </div>
-        <div class="icon-container">
-          <img src="assets/main/icons/Icon Kaffee Bohnen.svg" alt="Stylized icon of coffee beans">
-          <img src="assets/main/icons/Icon French Press.svg" alt="Stylized icon of french press coffee maker">
-          <img src="assets/main/icons/Icon Kaffee Schaufel.svg" alt="Stylized icon of coffee scoop">
+          <div class="icon-container">
+            <img src="../src/assets/main/icons/icon__kaffee-bohnen_wh.svg" alt="Stylized icon of coffee beans">
+            <img src="../src/assets/main/icons/icon__french-press_wh.svg" alt="Stylized icon of french press coffee maker">
+            <img src="../src/assets/main/icons/icon__kaffee-schaufel_wh.svg" alt="Stylized icon of coffee scoop">
+          </div>
         </div>
       </div>
       <div class="display--product-container">
-        <img class="display--product-img" src="assets/main/images/FEND_Coffee_Costa-Rica 2.jpg"
+        <img class="display--product-img" src="assets/main/images/FEND_Coffee_Costa-Rica-2.jpg"
           alt="Product Image of the Coffee 'Costa Rica'"></img>
         <div class="display--info-container">
           <div class="product-name">Costa Rica</div>
           <div class="product-price">6,90€ – 26,90€</div>
-        </div>
-        <div class="icon-container">
-          <img src="assets/main/icons/Icon Kaffee Bohnen.svg" alt="Stylized icon of coffee beans">
-          <img src="assets/main/icons/Icon French Press.svg" alt="Stylized icon of french press coffee maker">
-          <img src="assets/main/icons/Icon Kaffee Schaufel.svg" alt="Stylized icon of coffee scoop">
+          <div class="icon-container">
+            <img src="../src/assets/main/icons/icon__kaffee-bohnen_wh.svg" alt="Stylized icon of coffee beans">
+            <img src="../src/assets/main/icons/icon__french-press_wh.svg" alt="Stylized icon of french press coffee maker">
+            <img src="../src/assets/main/icons/icon__kaffee-schaufel_wh.svg" alt="Stylized icon of coffee scoop">
+          </div>
         </div>
       </div>
       <div class="display--product-container">
-        <img class="display--product-img" src="assets/main/images/FEND_Coffee_Costa-Rica 2.jpg"
+        <img class="display--product-img" src="assets/main/images/FEND_Coffee_Costa-Rica-2.jpg"
           alt="Product Image of the Coffee 'Costa Rica'"></img>
         <div class="display--info-container">
           <div class="product-name">Costa Rica</div>
           <div class="product-price">6,90€ – 26,90€</div>
-        </div>
-        <div class="icon-container">
-          <img src="assets/main/icons/Icon Kaffee Bohnen.svg" alt="Stylized icon of coffee beans">
-          <img src="assets/main/icons/Icon French Press.svg" alt="Stylized icon of french press coffee maker">
-          <img src="assets/main/icons/Icon Kaffee Schaufel.svg" alt="Stylized icon of coffee scoop">
+          <div class="icon-container">
+            <img src="../src/assets/main/icons/icon__kaffee-bohnen_wh.svg" alt="Stylized icon of coffee beans">
+            <img src="../src/assets/main/icons/icon__french-press_wh.svg" alt="Stylized icon of french press coffee maker">
+            <img src="../src/assets/main/icons/icon__kaffee-schaufel_wh.svg" alt="Stylized icon of coffee scoop">
+          </div>
         </div>
       </div>
     </div>
