--- a/src/_home/_section--header.html
+++ b/src/_home/_section--header.html
@@ -1,4 +1,4 @@
-<div class="home--header">
+<div class="header">
     <div class="header--title">
       <h1>Rustica</h1>
       <p class="header--subhead">Bio und Fair seit 1991</p>
