--- a/src/_home/_section--inhalt.html
+++ b/src/_home/_section--inhalt.html
@@ -1,21 +1,21 @@
 <section id="section--inhalt" class="main--section">
     <h2 class="section--head">Das steckt drin</h2>
     <div class="display--container">
-        <div class="display--product-container">
-            <img class="display--product-img" src="assets/main/images/FEND_Coffee_Costa-Rica 2.jpg"
+        <div class="hero--product-container">
+            <img class="hero--product-img" src="assets/main/images/FEND_Coffee_Costa-Rica-2.png"
                 alt="Product Image of the Coffee 'Costa Rica'"></img>
             <div class="display--info-container">
                 <div class="icon-container">
-                    <img class="icon-inhalt" src="assets/main/icons/Icon Kaffee Bohnen.svg" alt="Stylized icon of coffee beans">
+                    <img class="icon-inhalt" src="assets/main/icons/icon__kaffee-tasse_bl.svg" alt="Stylized icon of coffee beans">
                     <p class="body-text">Bester Geschmack</p>
                 </div>
                 <div class="icon-container">
-                    <img class="icon-inhalt" src="assets/main/icons/Icon French Press.svg" alt="Stylized icon of french press coffee maker">
+                    <img class="icon-inhalt" src="assets/main/icons/icon__kaffee-schaufel_bl.svg" alt="Stylized icon of french press coffee maker">
                     <p class="body-text">Fair gehandelt</p>
                 </div>
                 <div class="icon-container">
-                    <img class="icon-inhalt" src="assets/main/icons/Icon Kaffee Schaufel.svg" alt="Stylized icon of coffee scoop">
-                    <p class="body-text">Bio Qualität</p>
+                    <img class="icon-inhalt" src="assets/main/icons/icon__kaffee-pflanze_bl.svg" alt="Stylized icon of coffee scoop">
+                    <p class="body-text">Bio<br>Qualität</p>
                 </div>
             </div>
         </div>
