--- a/src/impressum.html
+++ b/src/impressum.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Das Café</title>
+    <title>Impressum</title>
     <link rel="stylesheet" href="css/main.scss" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <main id="impressum--main" class="main--section">
         <h2>Imprint &</h2>
@@ -28,8 +26,7 @@
             into force on October 1, 2011. Changes will be announced by e-mail. Please contact us if you have any
             questions. You will find details under Responsibility. <br>
             ​</p>
-        <h3>personal data</h3>
-        ​
+        <h3>personal data</h3>  ​
         <h3>survey</h3>
         <p> When you visit opencampus.sh, the web server stores the following data:
             <ul>
@@ -135,5 +132,4 @@
         <include src="templates/_footer.html" />
     </footer>
 </body>
-
 </html>
