--- a/src/_cafe/_section--gallery.html
+++ b/src/_cafe/_section--gallery.html
@@ -1,4 +1,4 @@
-<div id="café__section--gallery" class="main--section">
+<div id="cafe__section--gallery" class="main--section">
     <div class="gallery--container-shell">
         <div class="gallery--container">
             <img class="gallery--img-left" src="../src/assets/main/images/FEND-danish-1.jpg" alt="Photo of Pastries in a display case">
