--- a/src/café.html
+++ b/src/café.html
@@ -12,11 +12,11 @@
 
 <body>
   <header id="café--header-container">
-    <include src="_café/_section--header.html"/>
+    <include src="_cafe/_section--header.html"/>
   </header>
   <main id="café--main">
-    <include src="_café/_section--info.html"/>  
-    <include src="_café/_section--gallery.html"/>
+    <include src="_cafe/_section--info.html"/>  
+    <include src="_cafe/_section--gallery.html"/>
     <include src="_home/_section--ort.html"/>
   </main>
   <script src="js/index.js"></script>
