layout - get rid of a few bugs

--- a/src/cafe.html
+++ b/src/cafe.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-  <header id="café--header-container">
+  <header id="cafe--header-container">
     <include src="_cafe/_section--header.html"/>
   </header>
-  <main id="café--main">
+  <main id="cafe--main">
     <include src="_cafe/_section--info.html"/>  
     <include src="_cafe/_section--gallery.html"/>
     <include src="_home/_section--ort.html"/>
