--- a/src/_home/_section--ort.html
+++ b/src/_home/_section--ort.html
@@ -1,6 +1,9 @@
 <div id="section--ort" class="main--section">
     <h2 class="section--head">Komm vorbei</h2>
     <div class="background--container">
-    <img class="background-img" src="../src/assets/main/images/Bildschirmfoto 2020-12-14 um 09.59 1.jpg"></img>
+        <iframe class="background-img"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2325.855880716909!2d10.119832116211537!3d54.34185538019977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b2560c505797eb%3A0xf549da0f074162a9!2sFraunhoferstra%C3%9Fe%2013%2C%2024118%20Kiel!5e0!3m2!1sde!2sde!4v1610891243996!5m2!1sde!2sde"
+             frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+            tabindex="0"></iframe>
     </div>
 </div>
