build desktop: _home--header, _home--info

--- a/src/_home/_section--info.html
+++ b/src/_home/_section--info.html
@@ -1,29 +1,32 @@
 <section id="home__section--info" class="main--section">
-  <div class="section--info-right">
-    <div class="section--text-container" class="section--text">
+  <div class="section--info">
+    <div class="section--container section--text-container section--text">
       <h2 class="section--head">Rösterei & Café</h2>
       <p class="body-text">Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen Rösterei, serviert im
         gemütlichen Café in der
         Innenstadt.</p>
       <div class="section--info-row">
-        <div class="section--info-container" class="body-text">Komm uns besuchen!<br>
+        <div class="section--info-container body-text">Komm uns besuchen!<br>
           Fraunhoferstr. 13, Kiel</div>
-        <div class="section--info-container" class="body-text">Mo – Fr 8–18 Uhr<br>
+        <div class="section--info-container body-text">Mo – Fr 8–18 Uhr<br>
           Sa 11–18 Uhr</div>
       </div>
     </div>
-    <div class="section--img-right"><img src="assets/main/images/FEND-Coffee-shop.jpg"
+    <div class="section--container section--img-right"><img src="assets/main/images/FEND-Coffee-shop.jpg"
         alt="A Picture of our Coffee Shop">
     </div>
   </div>
   <div class="section--info">
-    <div class="section--text-container" class="section--text">
+    <div class="section--container section--text-container section--text">
       <h3 class="section--head">Bio und Fair</h3>
       <p class="body-text">Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konsonantien leben die
         Blindtexte. Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konsonantien leben die
         Blindtexte. Und das alles in bester Bio Qualität</p>
+      <button class="btn--dunkel">mehr</button>
+
     </div>
-    <div class="section--img"><img src="assets/main/images/FEND-coffee-plant.jpg" alt="A picture of a coffee plant">
+    <div class="section--container section--img"><img src="assets/main/images/FEND-coffee-plant.jpg"
+        alt="A picture of a coffee plant">
     </div>
   </div>
 </section>
