fix _home__header--btn styles (add spacer:hidden)

--- a/src/_home/_section--header.html
+++ b/src/_home/_section--header.html
@@ -1,7 +1,12 @@
 <div class="header">
-    <div class="header--title">
-      <h1>Rustica</h1>
-      <p class="header--subhead">Bio und Fair seit 1991</p>
-    </div>
+  <div class="spacer">
+    <button class="btn--dunkel"></button>
+  </div>
+  <div class="header--title">
+    <h1>Rustica</h1>
+    <p class="header--subhead">Bio und Fair seit 1991</p>
+  </div>
+  <div class="btn--container">
     <button class="btn--dunkel">zum Shop</button>
   </div>
+</div>
