refine desktop MQs (_footer, home), build _nav

--- a/src/cafe.html
+++ b/src/cafe.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+  <nav>
+    <include src="templates/_nav.html" />
+  </nav>
   <header id="cafe--header-container">
     <include src="_cafe/_section--header.html" />
   </header>
