--- a/src/_home/_section--inhalt.html
+++ b/src/_home/_section--inhalt.html
@@ -5,20 +5,25 @@
             <img class="hero--product-img" src="assets/main/images/FEND_Coffee_Costa-Rica-2.png"
                 alt="Product Image of the Coffee 'Costa Rica'"></img>
             <div class="display--info-container">
-                <div class="icon-container">
-                    <img class="icon-inhalt" src="assets/main/icons/icon__kaffee-tasse_bl.svg" alt="Stylized icon of coffee beans">
-                    <p class="body-text">Bester Geschmack</p>
+                <div class="icon-wrapper">
+                    <div class="icon-container">
+                        <img class="icon-inhalt" src="assets/main/icons/icon__kaffee-tasse_bl.svg"
+                            alt="Stylized icon of coffee beans">
+                        <p class="body-text"><span>Bester</span>Geschmack</p>
+                    </div>
+                    <div class="icon-container">
+                        <img class="icon-inhalt" src="assets/main/icons/icon__kaffee-schaufel_bl.svg"
+                            alt="Stylized icon of french press coffee maker">
+                        <p class="body-text"><span>Fair</span>gehandelt</p>
+                    </div>
+                    <div class="icon-container">
+                        <img class="icon-inhalt" src="assets/main/icons/icon__kaffee-pflanze_bl.svg"
+                            alt="Stylized icon of coffee scoop">
+                        <p class="body-text"><span>Bio</span>Qualität</p>
+                    </div>
                 </div>
-                <div class="icon-container">
-                    <img class="icon-inhalt" src="assets/main/icons/icon__kaffee-schaufel_bl.svg" alt="Stylized icon of french press coffee maker">
-                    <p class="body-text">Fair gehandelt</p>
-                </div>
-                <div class="icon-container">
-                    <img class="icon-inhalt" src="assets/main/icons/icon__kaffee-pflanze_bl.svg" alt="Stylized icon of coffee scoop">
-                    <p class="body-text">Bio<br>Qualität</p>
-                </div>
+                <button class="btn--dunkel">zum Shop</button>
             </div>
         </div>
     </div>
-    <button class="btn--dunkel">zum Shop</button>
 </section>
