--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+  <nav>
+    <include src="templates/_nav.html" />
+  </nav>
   <header id="home--header-container">
     <include src="_home/_section--header.html" />
   </header>
@@ -22,7 +25,7 @@
     <include src="_home/_section--ort.html" />
   </main>
   <script src="js/index.js"></script>
-  <footer id="footer-m" class="footer">
+  <footer id="footer" class="footer">
     <include src="templates/_footer.html" />
   </footer>
 </body>
