style _cafe__section--gallery for desktop

--- a/src/_cafe/_section--gallery.html
+++ b/src/_cafe/_section--gallery.html
@@ -1,12 +1,20 @@
 <div id="cafe__section--gallery" class="main--section">
-        <div class="gallery--container">
-            <img class="gallery--img-left" src="../src/assets/main/images/FEND-danish-1.jpg" alt="Photo of Pastries in a display case">
-            <img class="gallery--img-left" src="../src/assets/main/images/FEND-coffee-machine.jpg" alt="Side view photo of a glass being filled under a coffee machine">
-            <img class="gallery--img-left" src="../src/assets/main/images/FEND-Coffee-latte-art.jpg" alt="Photo of the hands of a barista, pouring milk into a small coffee cup">
-            <img class="gallery--img-left" src="../src/assets/main/images/FEND-Coffee-sign.jpg" alt="Photo of a glowing sign on a wall, spelling the word 'COFFEE' in capital letters">
-            <img class="gallery-img" src="../src/assets/main/images/FEND-Coffee-latte-art-2.jpg" alt="Top view photo of four coffee cups on a wooden stool">
-            <img class="gallery-img" src="../src/assets/main/images/FEND-coffee-breakfast-1.jpg" alt="Photo of a small breakfast on a wooden table">
-            <img class="gallery-img" src="../src/assets/main/images/FEND-coffee-list.jpg" alt="List of prices hanging on a brick wall in a café">
-            <img class="gallery-img" src="../src/assets/main/images/FEND-Coffee-latte-art-3.jpg" alt="Top view photo of three hands, holding different coffee cups into center">
-        </div>
+    <div class="gallery--container">
+        <img class="gallery--img-left img1" src="../src/assets/main/images/FEND-danish-1.jpg"
+            alt="Photo of Pastries in a display case">
+        <img class="gallery--img-left img2" src="../src/assets/main/images/FEND-coffee-machine.jpg"
+            alt="Side view photo of a glass being filled under a coffee machine">
+        <img class="gallery--img-left img3" src="../src/assets/main/images/FEND-Coffee-latte-art.jpg"
+            alt="Photo of the hands of a barista, pouring milk into a small coffee cup">
+        <img class="gallery--img-left img4" src="../src/assets/main/images/FEND-Coffee-sign.jpg"
+            alt="Photo of a glowing sign on a wall, spelling the word 'COFFEE' in capital letters">
+        <img class="gallery--img img5" src="../src/assets/main/images/FEND-Coffee-latte-art-2.jpg"
+            alt="Top view photo of four coffee cups on a wooden stool">
+        <img class="gallery--img img6" src="../src/assets/main/images/FEND-coffee-breakfast-1.jpg"
+            alt="Photo of a small breakfast on a wooden table">
+        <img class="gallery--img img7" src="../src/assets/main/images/FEND-coffee-list.jpg"
+            alt="List of prices hanging on a brick wall in a café">
+        <img class="gallery--img img8" src="../src/assets/main/images/FEND-Coffee-latte-art-3.jpg"
+            alt="Top view photo of three hands, holding different coffee cups into center">
+    </div>
 </div>
