finish style _cafe for desktop, enhance style _section--ort for desktop

--- a/src/_home/_section--info.html
+++ b/src/_home/_section--info.html
@@ -12,7 +12,7 @@
           Sa 11–18 Uhr</div>
       </div>
     </div>
-    <div class="section--container section--img-right"><img src="assets/main/images/FEND-Coffee-shop.jpg"
+    <div class="section--container section--img"><img src="assets/main/images/FEND-Coffee-shop.jpg"
         alt="A Picture of our Coffee Shop">
     </div>
   </div>
