--- a/src/_cafe/_section--info.html
+++ b/src/_cafe/_section--info.html
@@ -1,23 +1,23 @@
 <section id="cafe__section--info" class="main--section">
-  <div class="section--info-right">
-    <div class="section--text-container" class="section--text">
+  <div class="section--info">
+    <div class="section--container section--text-container section--text">
       <h2 class="section--head">Rösterei & Café</h2>
       <p class="body-text">Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen Rösterei, serviert im
         gemütlichen Café in der
         Innenstadt.</p>
       <div class="section--info">
-        <div class="section--info-container" class="body-text">Komm uns besuchen!<br>
+        <div class="section--info-container body-text">Komm uns besuchen!<br>
           Fraunhoferstr. 13, Kiel</div>
-        <div class="section--info-container" class="body-text">Mo – Fr 8–18 Uhr<br>
+        <div class="section--info-container body-text">Mo – Fr 8–18 Uhr<br>
           Sa 11–18 Uhr</div>
       </div>
     </div>
-    <div class="section--img-right"><img src="assets/main/images/FEND-Coffee-machine-2.jpg"
+    <div class="section--container section--img"><img src="assets/main/images/FEND-Coffee-machine-2.jpg"
         alt="A Picture of our Coffee Shop">
     </div>
   </div>
-  <div class="section--info-bottom">
-    <div class="section--text-container" class="section--text">
+  <div class="section--info-center">
+    <div class="section--container section--text-container section--text">
       <h2 class="section--head">Frisches Gebäck von nebenan</h2>
       <p class="body-text">Als es die ersten Hügel des Kursivgebirges erklommen hatte, warf es einen letzten Blick
         zurück auf die Skyline seiner Heimatstadt Buchstabhausen, die Headline von Alphabetdorf. Wehmütig lief ihm eine
