build _nav for mobile

--- a/src/impressum.html
+++ b/src/impressum.html
@@ -13,6 +13,7 @@
 <body>
     <nav>
         <include src="templates/_nav.html" />
+        <include src="templates/_nav-m.html" />
     </nav>
     <main id="impressum--main" class="main--section">
         <h2>Imprint &</h2>
