--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 <body>
   <nav>
     <include src="templates/_nav.html" />
+    <include src="templates/_nav-m.html" />
   </nav>
   <header id="home--header-container">
     <include src="_home/_section--header.html" />
