--- a/src/cafe.html
+++ b/src/cafe.html
@@ -13,6 +13,7 @@
 <body>
   <nav>
     <include src="templates/_nav.html" />
+    <include src="templates/_nav-m.html" />
   </nav>
   <header id="cafe--header-container">
     <include src="_cafe/_section--header.html" />
