--- a/src/herkunft.html
+++ b/src/herkunft.html
@@ -13,6 +13,7 @@
 <body>
   <nav>
     <include src="templates/_nav.html" />
+    <include src="templates/_nav-m.html" />
   </nav>
   <header id="herkunft--header-container">
     <include src="_herkunft/_section--header.html" />
