build _kontakt.html for mobile

--- a/src/_cafe/_section--info.html
+++ b/src/_cafe/_section--info.html
@@ -5,7 +5,7 @@
       <p class="body-text">Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen Rösterei, serviert im
         gemütlichen Café in der
         Innenstadt.</p>
-      <div class="section--info">
+      <div class="section--info-row">
         <div class="section--info-container body-text">Komm uns besuchen!<br>
           Fraunhoferstr. 13, Kiel</div>
         <div class="section--info-container body-text">Mo – Fr 8–18 Uhr<br>
