--- a/src/_herkunft/_section--info.html
+++ b/src/_herkunft/_section--info.html
@@ -1,6 +1,6 @@
 <section id="herkunft__section--info" class="main--section">
-  <div class="section--info-full">
-    <div class="section--text-container" class="section--text">
+  <div class="section--info-full>
+    <div class="section--container section--text-container section--text">
       <h2 class="section--head">Der Ursprung<br>von Rustica</h2>
       <p class="body-text">Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konsonantien leben die
         Blindtexte. Abgeschieden wohnen sie in Buchstabhausen an der Küste des Semantik, eines großen Sprachozeans. Ein
@@ -13,8 +13,8 @@
         Your browser does not support the video tag.
       </video>
     </div>
-    <div class="section--info-right">
-      <div class="section--text-container" class="section--text">
+    <div class="section--info">
+      <div class="section--container section--text-container section--text">
         <h2 class="section--head">Die Anbaugebiete</h2>
         <p class="body-text">Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konsonantien leben die
           Blindtexte. Abgeschieden wohnen sie in Buchstabhausen an der Küste des Semantik, eines großen Sprachozeans.
@@ -23,12 +23,12 @@
           paradiesmatisches Land, in dem einem gebratene Satzteile in den Mund fliegen.Nicht einmal von der allmächtigen
           Interpunktion werden die Blindtexte beherrscht – ein geradezu unorthographisches Leben.</p>
       </div>
-      <div class="section--img-right"><img src="assets/main/images/FEND-coffee-plant-2.jpg"
+      <div class="section--container section--img align-right"><img src="assets/main/images/FEND-coffee-plant-2.jpg"
           alt="A picture of red coffee beans and green leaves on a plant">
       </div>
     </div>
     <div class="section--info">
-      <div class="section--text-container" class="section--text">
+      <div class="section--container section--text-container section--text">
         <h2 class="section--head">Das Wohl der Kaffeebauern</h2>
         <p class="body-text">Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konsonantien leben die
           Blindtexte. Abgeschieden wohnen sie in Buchstabhausen an der Küste des Semantik, eines großen Sprachozeans.
@@ -37,7 +37,7 @@
           paradiesmatisches Land, in dem einem gebratene Satzteile in den Mund fliegen.Nicht einmal von der allmächtigen
           Interpunktion werden die Blindtexte beherrscht – ein geradezu unorthographisches Leben.</p>
       </div>
-      <div class="section--img"><img src="assets/main/images/FEND-Coffee-worker.jpg"
+      <div class="section--container section--img align-left"><img src="assets/main/images/FEND-Coffee-worker.jpg"
           alt="A photo of a woman picking coffee beans">
       </div>
     </div>
