_herkunft__section--info layout improvements

--- a/src/_herkunft/_section--info.html
+++ b/src/_herkunft/_section--info.html
@@ -23,7 +23,7 @@
           paradiesmatisches Land, in dem einem gebratene Satzteile in den Mund fliegen.Nicht einmal von der allmächtigen
           Interpunktion werden die Blindtexte beherrscht – ein geradezu unorthographisches Leben.</p>
       </div>
-      <div class="section--container section--img align-right"><img src="assets/main/images/FEND-coffee-plant-2.jpg"
+      <div class="section--container section--img align-right margin-top"><img src="assets/main/images/FEND-coffee-plant-2.jpg"
           alt="A picture of red coffee beans and green leaves on a plant">
       </div>
     </div>
@@ -37,7 +37,7 @@
           paradiesmatisches Land, in dem einem gebratene Satzteile in den Mund fliegen.Nicht einmal von der allmächtigen
           Interpunktion werden die Blindtexte beherrscht – ein geradezu unorthographisches Leben.</p>
       </div>
-      <div class="section--container section--img align-left"><img src="assets/main/images/FEND-Coffee-worker.jpg"
+      <div class="section--container section--img align-left extra-padding margin-top"><img src="assets/main/images/FEND-Coffee-worker.jpg"
           alt="A photo of a woman picking coffee beans">
       </div>
     </div>
