several small changes

--- a/src/herkunft.html
+++ b/src/herkunft.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Die Herkunft</title>
+    <link rel="stylesheet" href="css/main.scss" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Die Herkunft</title>
-  <link rel="stylesheet" href="css/main.scss" />
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
-</head>
-
-<body>
-  <nav>
-    <include src="templates/_nav.html" />
-    <include src="templates/_nav-m.html" />
-  </nav>
-  <header id="herkunft--header-container">
-    <include src="_herkunft/_section--header.html" />
-  </header>
-  <main id="café--main">
-    <include src="_herkunft/_section--info.html" />
-  </main>
-  <script src="js/index.js"></script>
-  <footer id="footer-m" class="footer">
-    <include src="templates/_footer.html" />
-  </footer>
-</body>
-
+  <body>
+    <nav>
+      <include src="templates/_nav.html" />
+      <include src="templates/_nav-m.html" />
+    </nav>
+    <header id="herkunft--header-container">
+      <include src="_herkunft/_section--header.html" />
+    </header>
+    <main id="café--main">
+      <include src="_herkunft/_section--info.html" />
+    </main>
+    <script src="js/index.js"></script>
+    <footer id="footer-m" class="footer">
+      <include src="templates/_footer.html" />
+    </footer>
+  </body>
 </html>
