--- a/src/kontakt.html
+++ b/src/kontakt.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kontakt</title>
     <link rel="stylesheet" href="css/main.scss" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
-</head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <include src="templates/_nav.html" />
     <include src="templates/_nav-m.html" />
     <header id="kontakt--header-container" class="header main--section">
-        <h2 class="header--title">Du hast Fragen?<br>
-            Schreib uns gern!</h2>
+      <h2 class="header--title">
+        Du hast Fragen?<br />
+        Schreib uns gern!
+      </h2>
     </header>
     <main id="kontakt--main" class="main--section">
-        <include src="_kontakt/_section--info.html" />
+      <include src="_kontakt/_section--kontakt.html" />
     </main>
     <script src="js/index.js"></script>
     <footer id="footer-m" class="footer">
-        <include src="templates/_footer.html" />
+      <include src="templates/_footer.html" />
     </footer>
-</body>
+  </body>
 </html>
