JS -> navbar-d switch color to white

--- a/src/index.html
+++ b/src/index.html
@@ -27,5 +27,7 @@
     <include src="templates/_footer.html" />
   </footer>
   <script src="js/index.js"></script>
+  <script defer src="js/nav.js"></script>
+  <script defer src="js/nav-m.js"></script>
 </body>
 </html>
