fix navbar_impressum; fix subpage html footer section

--- a/src/herkunft.html
+++ b/src/herkunft.html
@@ -24,8 +24,11 @@
       <include src="_herkunft/_section--info.html" />
     </main>
     <script src="js/index.js"></script>
-    <footer id="footer-m" class="footer">
+    <footer id="footer" class="footer">
       <include src="templates/_footer.html" />
     </footer>
+    <script src="js/index.js"></script>
+    <script defer src="js/nav.js"></script>
+    <script defer src="js/nav-m.js"></script>
   </body>
 </html>
