--- a/src/kontakt.html
+++ b/src/kontakt.html
@@ -24,9 +24,11 @@
     <main id="kontakt--main" class="main--section">
       <include src="_kontakt/_section--kontakt.html" />
     </main>
-    <script src="js/index.js"></script>
-    <footer id="footer-m" class="footer">
+    <footer id="footer" class="footer">
       <include src="templates/_footer.html" />
     </footer>
+    <script src="js/index.js"></script>
+    <script defer src="js/nav.js"></script>
+    <script defer src="js/nav-m.js"></script>
   </body>
 </html>
