--- a/src/cafe.html
+++ b/src/cafe.html
@@ -21,10 +21,12 @@
     <include src="_cafe/_section--gallery.html" />
     <include src="_home/_section--ort.html" />
   </main>
-  <script src="js/index.js"></script>
-  <footer id="footer-m" class="footer">
+  <footer id="footer" class="footer">
     <include src="templates/_footer.html" />
   </footer>
+  <script src="js/index.js"></script>
+  <script defer src="js/nav.js"></script>
+  <script defer src="js/nav-m.js"></script>
 </body>
 
 </html>
