--- a/src/impressum.html
+++ b/src/impressum.html
@@ -11,8 +11,10 @@
 </head>
 
 <body>
-        <include src="templates/_nav.html" />
-        <include src="templates/_nav-m.html" />
+    <include src="templates/_nav.html" />
+    <include src="templates/_nav-m.html" />
+    <header id="impressum--header-container">
+    </header>
     <main id="impressum--main" class="main--section">
         <h2>Imprint &</h2>
         <h3>adress</h3>
@@ -131,10 +133,12 @@
         <p>Upon request we will provide you with information on all your data. You will find contact details under
             Responsibility.</p>
     </main>
-    <script src="js/index.js"></script>
-    <footer id="footer-m" class="footer">
+    <footer id="footer" class="footer">
         <include src="templates/_footer.html" />
     </footer>
+    <script src="js/index.js"></script>
+    <script defer src="js/nav.js"></script>
+    <script defer src="js/nav-m.js"></script>
 </body>
 
 </html>
