build _shop html structure & css

--- a/src/shop.html
+++ b/src/shop.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Die Herkunft</title>
+    <title>Shop</title>
     <link rel="stylesheet" href="css/main.scss" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -17,13 +17,13 @@
       <include src="templates/_nav.html" />
       <include src="templates/_nav-m.html" />
     </nav>
-    <header id="herkunft--header-container">
-      <include src="_herkunft/_section--header.html" />
+    <header id="shop--header-container" class="header main--section">
+      <include src="_shop/_section--header.html" />
     </header>
-    <main id="cafe--main">
-      <include src="_herkunft/_section--info.html" />
+    <main id="shop--main">
+        <include src="_shop/_section--shop.html" />
+        <include src="_home/_section--ort.html" />
     </main>
-    <script src="js/index.js"></script>
     <footer id="footer" class="footer">
       <include src="templates/_footer.html" />
     </footer>
