navbar restructure to fix color bug

--- a/src/_home/_section--inhalt.html
+++ b/src/_home/_section--inhalt.html
@@ -22,7 +22,7 @@
                         <p class="body-text"><span>Bio</span>Qualität</p>
                     </div>
                 </div>
-                <button class="btn--dunkel">zum Shop</button>
+                <a href="./shop.html" class="btn--dunkel">zum Shop</a>
             </div>
         </div>
     </div>
