--- a/src/_home/_section--sorten.html
+++ b/src/_home/_section--sorten.html
@@ -58,5 +58,5 @@
       </div>
     </div>
   </div>
-  <button class="btn--dunkel">alle Produkte</button>
+  <a href="./shop.html" class="btn--dunkel">alle Produkte</a>
 </section>
