--- a/src/cafe.html
+++ b/src/cafe.html
@@ -27,6 +27,7 @@
   <script src="js/index.js"></script>
   <script defer src="js/nav.js"></script>
   <script defer src="js/nav-m.js"></script>
+  <script defer src="js/nav-m--menuSlide.js"></script>
 </body>
 
 </html>
