--- a/src/herkunft.html
+++ b/src/herkunft.html
@@ -13,10 +13,7 @@
   </head>
 
   <body>
-    <nav>
       <include src="templates/_nav.html" />
-      <include src="templates/_nav-m.html" />
-    </nav>
     <header id="herkunft--header-container">
       <include src="_herkunft/_section--header.html" />
     </header>
@@ -30,5 +27,6 @@
     <script src="js/index.js"></script>
     <script defer src="js/nav.js"></script>
     <script defer src="js/nav-m.js"></script>
+    <script defer src="js/nav-m--menuSlide.js"></script>
   </body>
 </html>
