--- a/src/impressum.html
+++ b/src/impressum.html
@@ -11,8 +11,7 @@
 </head>
 
 <body>
-    <include src="templates/_nav.html" />
-    <include src="templates/_nav-m.html" />
+        <include src="templates/_nav--static-wh.html" />
     <header id="impressum--header-container">
     </header>
     <main id="impressum--main" class="main--section">
@@ -137,8 +136,7 @@
         <include src="templates/_footer.html" />
     </footer>
     <script src="js/index.js"></script>
-    <script defer src="js/nav.js"></script>
-    <script defer src="js/nav-m.js"></script>
+    <script defer src="js/nav-m--menuSlide.js"></script>
 </body>
 
 </html>
