--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,6 @@
 
 <body>
     <include src="templates/_nav.html" />
-    <include src="templates/_nav-m.html" />
   <header id="home--header-container">
     <include src="_home/_section--header.html" />
   </header>
@@ -30,5 +29,6 @@
   <script src="js/index.js"></script>
   <script defer src="js/nav.js"></script>
   <script defer src="js/nav-m.js"></script>
+  <script defer src="js/nav-m--menuSlide.js"></script>
 </body>
 </html>
