--- a/src/kontakt.html
+++ b/src/kontakt.html
@@ -13,8 +13,7 @@
   </head>
 
   <body>
-    <include src="templates/_nav.html" />
-    <include src="templates/_nav-m.html" />
+      <include src="templates/_nav--static-wh.html" />
     <header id="kontakt--header-container" class="header main--section">
       <h2 class="header--title">
         Du hast Fragen?<br />
@@ -28,7 +27,6 @@
       <include src="templates/_footer.html" />
     </footer>
     <script src="js/index.js"></script>
-    <script defer src="js/nav.js"></script>
-    <script defer src="js/nav-m.js"></script>
+    <script defer src="js/nav-m--menuSlide.js"></script>
   </body>
 </html>
