--- a/src/shop.html
+++ b/src/shop.html
@@ -14,8 +14,7 @@
 
   <body>
     <nav>
-      <include src="templates/_nav.html" />
-      <include src="templates/_nav-m.html" />
+      <include src="templates/_nav--static-wh.html" />
     </nav>
     <header id="shop--header-container" class="header main--section">
       <include src="_shop/_section--header.html" />
@@ -28,7 +27,6 @@
       <include src="templates/_footer.html" />
     </footer>
     <script src="js/index.js"></script>
-    <script defer src="js/nav.js"></script>
-    <script defer src="js/nav-m.js"></script>
+    <script defer src="js/nav-m--menuSlide.js"></script>
   </body>
 </html>
