--- a/src/_home/_section--header.html
+++ b/src/_home/_section--header.html
@@ -7,6 +7,6 @@
     <p class="header--subhead">Bio und Fair seit 1991</p>
   </div>
   <div class="btn--container">
-    <button class="btn--dunkel">zum Shop</button>
+    <a href="./shop.html" class="btn--dunkel">zum Shop</a>
   </div>
 </div>
