build _shop, _cart html&css, build shop JS (unfinished)

--- a/src/shop.html
+++ b/src/shop.html
@@ -13,16 +13,15 @@
   </head>
 
   <body>
-    <nav>
-      <include src="templates/_nav--static-wh.html" />
-    </nav>
+    <include src="templates/_nav--static-wh.html" />
     <header id="shop--header-container" class="header main--section">
       <include src="_shop/_section--header.html" />
     </header>
     <main id="shop--main">
-        <include src="_shop/_section--shop.html" />
-        <include src="_home/_section--ort.html" />
+      <include src="_shop/_section--shop.html" />
+      <include src="_home/_section--ort.html" />
     </main>
+    <include src="_shop/_cart.html" />
     <footer id="footer" class="footer">
       <include src="templates/_footer.html" />
     </footer>
