--- a/src/_cafe/_section--info.html
+++ b/src/_cafe/_section--info.html
@@ -24,7 +24,7 @@
         rhetorische Frage über die Wange, dann setzte es seinen Weg fort. Unterwegs traf es eine Copy. Die Copy warnte
         das Blindtextchen, da, wo sie herkäme wäre sie zigmal umgeschrieben worden und alles, was von ihrem Ursprung
         noch übrig wäre, sei das Wort "und" und das Blindtextchen solle umkehren und wieder in sein eigenes, sicheres
-        Land zurückkehren.</p>
+        Land zurückkehren. Test</p>
     </div>
   </div>
 </section>
